Maybe fix wrapping items
Fixes #3817

--- a/src/app/d2-loadout-builder/generated-sets/GeneratedSet.m.scss
+++ b/src/app/d2-loadout-builder/generated-sets/GeneratedSet.m.scss
@@ -54,8 +54,8 @@
   }
 
   > * {
-    margin-right: 16px;
-    margin-bottom: 16px;
+    margin-right: 14px;
+    margin-bottom: 14px;
     &:last-child {
       margin-right: 0;
     }
